meta.html情報を更新

--- a/meta.html
+++ b/meta.html
@@ -1,21 +1,21 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1" />
-<meta name="apple-mobile-web-app-title" content="13個のゼリー" />
+<meta name="apple-mobile-web-app-title" content="藝術たしなみマトリクス" />
 <meta name="format-detection" content="telephone=no" />
-<meta name="description" content="13個のゼリー 13 Jellies| 学術系統図の紹介サイト。独学で修養したい30歳以上のノンエリートのための羅針盤のページです。下町の職人の小倅だった筆者・ガシガシ興戸貝多郎が作成。An introduction site to academic genealogies. This is a compass page for non-elites over 30 who wish to cultivate themselves through self-study. Created by the author, Gashigashi Kōdo Kaitarō, who was the son of a downtown craftsman." />
-<meta name="keywords" content="13個のゼリー," />
-<meta property="og:title" content="13個のゼリー 13 Jellies| 学術系統図の紹介サイト。独学で修養したい30歳以上のノンエリートのための羅針盤のページです。下町の職人の小倅だった筆者・ガシガシ興戸貝多郎が作成。An introduction site to academic genealogies. This is a compass page for non-elites over 30 who wish to cultivate themselves through self-study. Created by the author, Gashigashi Kōdo Kaitarō, who was the son of a downtown craftsman." />
+<meta name="description" content="藝術たしなみマトリクス| 「この程度を知っていれば、無教養と小馬鹿にはされない」クラスの芸術を一覧で俯瞰できる目録ページ" />
+<meta name="keywords" content="藝術たしなみマトリクス," />
+<meta property="og:title" content="藝術たしなみマトリクス| 「この程度を知っていれば、無教養と小馬鹿にはされない」クラスの芸術を一覧で俯瞰できる目録ページ" />
 <meta property="og:type" content="website" />
-<meta property="og:description" content="13個のゼリー 13 Jellies| 学術系統図の紹介サイト。独学で修養したい30歳以上のノンエリートのための羅針盤のページです。下町の職人の小倅だった筆者・ガシガシ興戸貝多郎が作成。An introduction site to academic genealogies. This is a compass page for non-elites over 30 who wish to cultivate themselves through self-study. Created by the author, Gashigashi Kōdo Kaitarō, who was the son of a downtown craftsman." />
-<meta property="og:url" content="https://cf268321.cloudfree.jp/13jellies/index.php" />
-<meta property="og:site_name" content="13個のゼリー" />
-<meta property="og:image" content="https://cf268321.cloudfree.jp/13jellies/asset/img/ogp.png" />
+<meta property="og:description" content="藝術たしなみマトリクス| 「この程度を知っていれば、無教養と小馬鹿にはされない」クラスの芸術を一覧で俯瞰できる目録ページ" />
+<meta property="og:url" content="https://cf268321.cloudfree.jp/art_matrix/index.php" />
+<meta property="og:site_name" content="藝術たしなみマトリクス" />
+<meta property="og:image" content="https://cf268321.cloudfree.jp/art_matrix/img_files/ogp.png" />
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://cf268321.cloudfree.jp/13jellies/asset/img/ogp.png">
+<meta name="twitter:image" content="https://cf268321.cloudfree.jp/art_matrix/img_files/ogp.png">
 
-<link rel="canonical" href="https://cf268321.cloudfree.jp/13jellies/index.php" />
-<link rel="alternate" type="application/rss+xml" title="13個のゼリー" />
-<link rel="dns-prefetch" href="//cf268321.cloudfree.jp/13jellies/index.php" />
+<link rel="canonical" href="https://cf268321.cloudfree.jp/art_matrix/index.php" />
+<link rel="alternate" type="application/rss+xml" title="藝術たしなみマトリクス" />
+<link rel="dns-prefetch" href="//cf268321.cloudfree.jp/art_matrix/index.php" />
 <link rel="shortcut icon" href="https://cf268321.cloudfree.jp/club1300/assets/img/club1300.ico" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
