GoogleAnalyticsタグを追記

--- a/meta.html
+++ b/meta.html
@@ -24,3 +24,12 @@
 <link rel="stylesheet" href="https://cf268321.cloudfree.jp/13jellies/asset/css/common.css" />
 
 <script src="https://unpkg.com/budoux/bundle/budoux-ja.min.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TDGYXHRXTD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TDGYXHRXTD');
+</script>
